# ingestor

./: .gitignore  AGENTS.md  README.md  evaluation-report.md  package.json  pytest.ini  qa-evaluation-2026-06-27.md  qa-report.md  rag_architecture_comparison.md
.github/workflows/: publish-python.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  api.py  api_cli.py  chunking.py  cli.py  config.py  content.py  crawler.py  database.py  desktop_server.py  discovery.py  embedding.py  embedding_pipeline.py  folders.py  ingestion.py  installed_cli.py  main.py  models.py  packaged_backend.py  retrieval.py  search.py  service.py  skills.py  vector_index.py
backend/app/api/: folders.py  routes.py  skills.py
backend/app/cli/: client.py  main.py  output.py
backend/app/core/: config.py
backend/app/daemon/: __init__.py  __main__.py  app.py  server.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/domain/: __init__.py  models.py
backend/app/indexing/: __init__.py  chunking.py  crawler.py  discovery.py  documents.py  embedding_pipeline.py  timing.py
backend/app/retrieval/: __init__.py  embeddings.py  evaluation.py  search.py  settings.py  vector_index.py
backend/app/sources/: __init__.py  service.py
backend/scripts/: build-packaged-binaries.mjs
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.module.css  App.tsx  api.ts  desktop.ts  index.css  main.tsx  types.ts  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/windows/: installer.wxs
frontend/src-tauri/windows/locales/: en-US.wxl
frontend/src/constants/: webDefaults.ts
frontend/src/hooks/: useSettingsController.ts  useSourcesController.ts
frontend/src/pages/CapturePage/: CapturePage.module.css  CapturePage.tsx
frontend/src/pages/SettingsPage/: SettingsPage.module.css  SettingsPage.tsx
frontend/src/utils/: jobProgress.ts  sourceHelpers.ts
scripts/: build-tauri-update.mjs  publish-github-release.mjs  release-env.mjs  release-version.mjs  setup-tauri-updater.mjs
skills/ingestor-docs-manage/: SKILL.md
skills/ingestor-docs-search/: SKILL.md
skills/ingestor-manage/: SKILL.md
skills/ingestor-search/: SKILL.md
tests/: test_ingestion_and_search.py  test_retrieval_evaluation.py
tests/evals/retrieval/: local_docs_fixture.json  neon_fixture.json
(+18 files in other folders)
