[project]
name = "ingestor"
version = "0.1.5"
description = "Standalone documentation ingestion, indexing, and retrieval for local agents."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["agents", "documentation", "retrieval", "search", "tauri"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "fastapi[standard]>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.6",
  "beautifulsoup4>=4.12",
  "markdownify>=0.13",
  "httpx>=0.28",
  "crawl4ai>=0.8.9",
  "trafilatura>=1.9,<2.0",
  "sqlmodel>=0.0.24",
  "sqlite-vec>=0.1.9",
  "typer>=0.16",
]

[project.scripts]
ingestor = "app.cli:main"
ingestor-daemon = "app.daemon:main"

[project.urls]
Homepage = "https://github.com/aribbabar/ingestor"
Repository = "https://github.com/aribbabar/ingestor"
Issues = "https://github.com/aribbabar/ingestor/issues"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
